--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleone.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleone.html
@@ -18,13 +18,13 @@
         <!-- 按钮 查询 导入 -->
         <div class="querySuite-button">
             <button class="btn btn-default" action="query">
-                <span class="glyphicon glyphicon-search"></span> 查询
+                <span class="glyphicon glyphicon-search"></span>查询
             </button>
             <button class="btn btn-default" action="add" action-modal="myModal">
-                <span class="glyphicon glyphicon-plus-sign"></span> 添加
+                <span class="glyphicon glyphicon-plus-sign"></span>添加
             </button>
             <button class="btn btn-danger" action="delete">
-                <span class="glyphicon glyphicon-trash"></span> 删除
+                <span class="glyphicon glyphicon-trash"></span>删除
             </button>
         </div>
         <!-- 列表-->
@@ -37,6 +37,7 @@
                     <tr>
                         <th style="width:30px;"><input type="checkbox" /></th>
                         <th data-field="exampleName" data-format="edit">示例名称</th>
+                        <th data-field="exampleName">示例名称</th>
                         <th data-field="createTime" data-format="time|yyyy-MM-dd HH:mm:ss">创建时间</th>
                     </tr>
                 </thead>
