--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleone.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleone.html
@@ -1,4 +1,5 @@
-﻿<link href="../../css/lib/fileupload.css" rel="stylesheet" />
+﻿<!--BitAdmin2.0框架文件-->
+<link href="../../css/lib/fileupload.css" rel="stylesheet" />
 <div class="box">
     <div class="box-body querySuite-wrapper">
         <!-- 条件搜索 -->
