--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleone.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleone.html
@@ -204,11 +204,9 @@
 
     $(function () {
 
-        var linkageSelectTrue = $("#linkageSelectTrue").linkageSelect().change(function (e) {
-        });
+        var linkageSelectTrue = $("#linkageSelectTrue").linkageSelect().change(function (e) {});
         //同步
-        var linkageSelectFalse = $("#linkageSelectFalse").linkageSelect().change(function (e) {
-        });
+        var linkageSelectFalse = $("#linkageSelectFalse").linkageSelect().change(function (e) {});
 
         //查询套件初始化
         var querySuite = $(".querySuite-wrapper").querySuite()
