--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirect.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirect.html
@@ -35,7 +35,7 @@
                         <th style="width: 30px;"><input type="checkbox" /></th>
                         <th data-field="exampleName">示例名称</th>
                         <th data-field="exampleText">普通文本</th>
-                        <th data-field="examplePhone">电话号码</th>
+                        <th data-field="examplePhone" data-format="cut|6">电话号码</th>
                         <th data-field="exampleTime" data-format="time|yyyy-MM-dd HH:mm:ss">日期时间</th>
                         <th data-field="option">操作</th>
                     </tr>
