--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirectEdit.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirectEdit.html
@@ -154,10 +154,7 @@
                     console.log(result);
                     console.log(ue.getContent());
                 });
-            })
-            .load({ "exampleId": exampleId });
-
-
+            }).load({ "exampleId": exampleId });
 
         //radio回调事件
         $("body").on("change", "#myModal :radio[name=exampleRadio]", function () { })
